Removed failed attempt to fix Settings Panel overflow with css

--- a/src/apps/kanban/KanbanApp.css
+++ b/src/apps/kanban/KanbanApp.css
@@ -24,7 +24,3 @@
   float: right;
   padding-right: 4px;
 }
-
-html {
-  overflow-y: show;
-}
